fix:Spacing

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
+  padding: 1rem 5rem;
   background-color: white;
   border-bottom: 1px solid #ffffff;
 }
@@ -269,7 +269,7 @@ body {
   flex-direction: column;
   padding: 2rem;
 
-  width: 70vw;
+  width: 50vw;
 }
 
 .contact-form h1 {
@@ -336,7 +336,7 @@ textarea {
   background-color: #007bff;
   color: white;
   height: 3rem;
-  padding: 0.5rem 5rem;
+  padding: 0.5rem 3.5rem;
   font-size: 1.2rem;
   border-radius: 4px;
   cursor: pointer;
@@ -345,7 +345,7 @@ textarea {
 footer {
   background: #fff;
   color: #858a8f;
-  padding: 2rem;
+  padding: 4rem;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -421,8 +421,8 @@ footer .footer-top .footer-main a {
 }
 
 footer .footer-bottom {
-  text-align: center;
-  margin-top: 2rem;
+  text-align: start;
+  margin-top: 4rem;
 }
 
 @media (max-width: 800px) {
